Added per-user activity count and ranking tables.